<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorlightGray"
        tools:context=".MainActivity" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <View
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="3dp"/>

        <EditText
                android:id="@+id/editDistance"
                style="@style/mCustomEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/strDistance"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/strTotalKilometers"
                android:textColor="@color/colorDarkGray"
                android:textAllCaps="true"
                android:textSize="10sp" />

        <EditText
                android:id="@+id/editPrice"
                style="@style/mCustomEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/strPrice"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/strPriceLiter"
                android:textColor="@color/colorDarkGray"
                android:textAllCaps="true"
                android:textSize="10sp" />

        <EditText
                android:id="@+id/editAutonomy"
                style="@style/mCustomEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/strAutonomy"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/strKmLiter"
                android:textColor="@color/colorDarkGray"
                android:textAllCaps="true"
                android:textSize="10sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="35dp"
                android:text="@string/strYourExpenses"
                android:textColor="@color/colorDarkGray"
                android:textAllCaps="true"
                android:textSize="10sp" />

        <TextView
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35dp"
                android:gravity="center"
                android:text="@string/strResult"/>

        <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="20dp"
                android:textAllCaps="true"
                android:textColor="@color/colorlightGray"
                android:background="@drawable/round_button"
                android:text="@string/strCalculate"/>

    </LinearLayout>

</ScrollView>